err/mfe-fwaas.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mfe_fwaas'...
Listing './lib/python3.5/site-packages/mfe_fwaas/alembic'...
Listing './lib/python3.5/site-packages/mfe_fwaas/alembic/versions'...
Listing './lib/python3.5/site-packages/mfe_fwaas/fwaas_driver'...
Listing './lib/python3.5/site-packages/mfe_fwaas/libsmc'...
Listing './lib/python3.5/site-packages/mfe_fwaas/router_plugin'...
Compiling './lib/python3.5/site-packages/mfe_fwaas/router_plugin/ngfw_driver.py'...
***   File "./lib/python3.5/site-packages/mfe_fwaas/router_plugin/ngfw_driver.py", line 100
    print "XXXXXXXXXX"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mfe_fwaas/router_plugin/ngfw_neutron_plugin.py'...
***   File "./lib/python3.5/site-packages/mfe_fwaas/router_plugin/ngfw_neutron_plugin.py", line 272
    print "XXXXXXXXXX"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mfe_fwaas/router_plugin/ngfw_smc_driver.py'...
***   File "./lib/python3.5/site-packages/mfe_fwaas/router_plugin/ngfw_smc_driver.py", line 68
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mfe_fwaas-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
